tests/paczka1/small_fuzzy/37488000.err
Error in line 3: S165 S672 79,1
Error in line 5: 1DLe0t A522 -1,8
